--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10"
   }
 }
